--- a/input.css
+++ b/input.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700&display=swap');
+
+@import "tailwindcss/preflight";
+@import "tailwindcss/components"; 
+@import "tailwindcss/utilities";    
